add search api and remove article before reindex
